--- a/Polyhedron/demo/Polyhedron/CMakeLists.txt
+++ b/Polyhedron/demo/Polyhedron/CMakeLists.txt
@@ -236,7 +236,7 @@ if(CGAL_Qt5_FOUND AND Qt5_FOUND)
   add_item(scene_c3t3_item Scene_c3t3_item.cpp)
   target_link_libraries(
     scene_c3t3_item PUBLIC scene_triangulation_3_item
-    scene_surface_mesh_item scene_polygon_soup_item
+    scene_surface_mesh_item scene_polygon_soup_item scene_edit_box_item
     scene_basic_objects ${TBB_LIBRARIES})
 
   if(TARGET CGAL::TBB_support)
