--- a/Triangulation_3/test/Triangulation_3/CMakeLists.txt
+++ b/Triangulation_3/test/Triangulation_3/CMakeLists.txt
@@ -96,6 +96,7 @@ CGAL_add_cdt3_from_local_off_test(cheese36)
 CGAL_add_cdt3_from_local_off_test(cheese6-PLCerrorWithFace0)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-11)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-10a)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-reduced)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv)
 CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv-reduced)
