Fix CMake error on Windows
https://cgal.geometryfactory.com/CGAL/testsuite/CGAL-6.0-Ic-73/Installation/TestReport_Christo_MSVC-2022-Preview-Release.gz
```
CMake Error at cmake/modules/CGAL_SetupGMP.cmake:73 (target_link_libraries):
  The plain signature for target_link_libraries has already been used with
  the target "test_gmp_mpfr_dll".  All uses of target_link_libraries with a
  target must be either all-keyword or all-plain.

  The uses of the plain signature are here:

   * test/Installation/CMakeLists.txt:54 (target_link_libraries)

Call Stack (most recent call first):
  test/Installation/CMakeLists.txt:55 (use_CGAL_GMP_support)
```

--- a/Installation/test/Installation/CMakeLists.txt
+++ b/Installation/test/Installation/CMakeLists.txt
@@ -49,9 +49,9 @@ endif()
 
 if(WIN32 OR CMAKE_SYSTEM_NAME STREQUAL Windows)
   add_executable(display_dll_version_info display_dll_version_info.cpp)
-  target_link_libraries(display_dll_version_info version)
+  target_link_libraries(display_dll_version_info PRIVATE version)
   add_executable(test_gmp_mpfr_dll test_gmp_mpfr_dll.cpp)
-  target_link_libraries(test_gmp_mpfr_dll version)
+  target_link_libraries(test_gmp_mpfr_dll PRIVATE version)
   use_CGAL_GMP_support(test_gmp_mpfr_dll)
   CGAL_add_test(test_gmp_mpfr_dll)
   add_to_cached_list( CGAL_EXECUTABLE_TARGETS test_gmp_mpfr_dll )
