--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -53,6 +53,7 @@ create_single_source_cgal_program("hausdorff_distance_remeshing_example.cpp")
 create_single_source_cgal_program("hausdorff_bounded_error_distance_example.cpp")
 create_single_source_cgal_program("locally_shortest_path_sm_example.cpp")
 create_single_source_cgal_program("trace_bezier_segment_sm_example.cpp")
+create_single_source_cgal_program("geodesic_circles_sm_example.cpp")
 
 find_package(Eigen3 3.2.0 QUIET) #(requires 3.2.0 or greater)
 include(CGAL_Eigen3_support)
