straightest geodesic (WIP)

--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -51,9 +51,6 @@ create_single_source_cgal_program("match_faces.cpp")
 create_single_source_cgal_program("cc_compatible_orientations.cpp")
 create_single_source_cgal_program("hausdorff_distance_remeshing_example.cpp")
 create_single_source_cgal_program("hausdorff_bounded_error_distance_example.cpp")
-create_single_source_cgal_program("locally_shortest_path_sm_example.cpp")
-create_single_source_cgal_program("trace_bezier_segment_sm_example.cpp")
-create_single_source_cgal_program("geodesic_circles_sm_example.cpp")
 
 find_package(Eigen3 3.2.0 QUIET) #(requires 3.2.0 or greater)
 include(CGAL_Eigen3_support)
@@ -76,6 +73,10 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(delaunay_remeshing_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("remesh_almost_planar_patches.cpp")
   target_link_libraries(remesh_almost_planar_patches PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("locally_shortest_path_sm_example.cpp")
+  target_link_libraries(locally_shortest_path_sm_example PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("trace_bezier_segment_sm_example.cpp")
+  create_single_source_cgal_program("geodesic_circles_sm_example.cpp")
 else()
   message(STATUS "NOTICE: Examples that use Eigen will not be compiled.")
 endif()
