raw import of file
version from CB:AUS:marking_sample@a80cd964d0

--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -77,6 +77,7 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(locally_shortest_path_sm_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("trace_bezier_segment_sm_example.cpp")
   create_single_source_cgal_program("geodesic_circles_sm_example.cpp")
+  create_single_source_cgal_program("straightest_geodesic_sm_example.cpp")
 else()
   message(STATUS "NOTICE: Examples that use Eigen will not be compiled.")
 endif()
