--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -76,8 +76,11 @@ if(TARGET CGAL::Eigen3_support)
   create_single_source_cgal_program("locally_shortest_path_sm_example.cpp")
   target_link_libraries(locally_shortest_path_sm_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("trace_bezier_segment_sm_example.cpp")
+  target_link_libraries(trace_bezier_segment_sm_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("geodesic_circles_sm_example.cpp")
+  target_link_libraries(geodesic_circles_sm_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("straightest_geodesic_sm_example.cpp")
+  target_link_libraries(straightest_geodesic_sm_example PUBLIC CGAL::Eigen3_support)
 else()
   message(STATUS "NOTICE: Examples that use Eigen will not be compiled.")
 endif()
