--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -73,6 +73,8 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(delaunay_remeshing_example PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("remesh_almost_planar_patches.cpp")
   target_link_libraries(remesh_almost_planar_patches PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("geodesic_isolevel_refinement.cpp")
+  target_link_libraries(geodesic_isolevel_refinement PUBLIC CGAL::Eigen3_support)
 else()
   message(STATUS "NOTICE: Examples that use Eigen will not be compiled.")
 endif()
