--- a/CGAL_ipelets/demo/CGAL_ipelets/CMakeLists.txt
+++ b/CGAL_ipelets/demo/CGAL_ipelets/CMakeLists.txt
@@ -65,7 +65,7 @@ if(IPE_FOUND AND IPE_VERSION)
   set(CGAL_IPELETS ${CGAL_IPELETS} mesh_2)
   set(CGAL_IPELETS ${CGAL_IPELETS} minkowski)
   set(CGAL_IPELETS ${CGAL_IPELETS} mst)
-  set(CGAL_IPELETS ${CGAL_IPELETS} nng)
+  set(CGAL_IPELETS ${CGAL_IPELETS} nearest_neighbor_graph)
   set(CGAL_IPELETS ${CGAL_IPELETS} multi_delaunay)
   set(CGAL_IPELETS ${CGAL_IPELETS} multi_regular)
   set(CGAL_IPELETS ${CGAL_IPELETS} partition)
