(dummy) initial test with input sizing field (compiles)

--- a/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/test/Tetrahedral_remeshing/CMakeLists.txt
@@ -21,6 +21,9 @@ if(TARGET CGAL::Eigen3_support)
   create_single_source_cgal_program("test_mesh_and_remesh_polyhedral_domain_with_features.cpp")
   target_link_libraries(test_mesh_and_remesh_polyhedral_domain_with_features PUBLIC CGAL::Eigen3_support)
 
+  create_single_source_cgal_program("test_mesh_and_remesh_with_sizing_field.cpp")
+  target_link_directories(test_mesh_and_remesh_with_sizing_field PUBLIC CGAL::Eigen3_support)
+
   if(CGAL_ImageIO_USE_ZLIB)
     create_single_source_cgal_program("test_mesh_and_remesh_image.cpp")
     target_link_libraries(test_mesh_and_remesh_image PUBLIC CGAL::Eigen3_support)
