fix a link error about ~Scene_item_with_properties
```
            Creating library C:/CGAL_ROOT/CGAL-6.0-Ic-93/cmake/platforms/MSVC-2022-Community-Release/test/Polyhedron_Demo/Release/scene_points_with_normal_item.lib and object C:/CGAL_ROOT/CGAL-6.0-Ic-93/cmake/platforms/MSVC-2022-Community-Release/test/Polyhedron_Demo/Release/scene_points_with_normal_item.exp
   158>Scene_points_with_normal_item.obj : error LNK2019: unresolved external symbol "__declspec(dllimport) public: virtual __cdecl CGAL::Three::Scene_item_with_properties::~Scene_item_with_properties(void)" (__imp_??1Scene_item_with_properties@Three@CGAL@@UEAA@XZ) referenced in function "int `public: __cdecl Scene_points_with_normal_item::Scene_points_with_normal_item(class dtor$1 const &)'::`1'::dtor$1" (?dtor$1@?0???0Scene_points_with_normal_item@@QEAA@AEBV0@@Z@4HA) [C:\CGAL_ROOT\CGAL-6.0-Ic-93\cmake\platforms\MSVC-2022-Community-Release\test\Polyhedron_Demo\scene_points_with_normal_item.vcxproj]
   158>Scene_points_with_normal_item.obj : error LNK2019: unresolved external symbol "__declspec(dllimport) public: __cdecl CGAL::Three::Scene_item_with_properties::Scene_item_with_properties(void)" (__imp_??0Scene_item_with_properties@Three@CGAL@@QEAA@XZ) referenced in function "public: __cdecl Scene_points_with_normal_item::Scene_points_with_normal_item(class Scene_points_with_normal_item const &)" (??0Scene_points_with_normal_item@@QEAA@AEBV0@@Z) [C:\CGAL_ROOT\CGAL-6.0-Ic-93\cmake\platforms\MSVC-2022-Community-Release\test\Polyhedron_Demo\scene_points_with_normal_item.vcxproj]
   158>C:\CGAL_ROOT\CGAL-6.0-Ic-93\cmake\platforms\MSVC-2022-Community-Release\test\Polyhedron_Demo\Release\scene_points_with_normal_item.dll : fatal error LNK1120: 2 unresolved externals [C:\CGAL_ROOT\CGAL-6.0-Ic-93\cmake\platforms\MSVC-2022-Community-Release\test\Polyhedron_Demo\scene_points_with_normal_item.vcxproj]
```
https://cgal.geometryfactory.com/CGAL/testsuite/CGAL-6.0-Ic-93/Polyhedron_Demo/TestReport_Christo_MSVC-2022-Communit

--- a/Polyhedron/demo/Polyhedron/CMakeLists.txt
+++ b/Polyhedron/demo/Polyhedron/CMakeLists.txt
@@ -179,6 +179,7 @@ if(CGAL_Qt5_FOUND AND Qt5_FOUND)
     Viewer_interface_moc.cpp
     Scene_item_moc.cpp
     Scene_item.cpp
+    Scene_item_with_properties.cpp
     Triangle_container.cpp
     Edge_container.cpp
     Point_container.cpp
