Patch usage of BUILD_TESTING to handle the case that CGAL is a subproject.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,14 +46,14 @@ option(
 
 message("== CMake setup (DONE) ==\n")
 
-# Enable testing with BUILD_TESTING
-option(BUILD_TESTING "Build the testing tree." OFF)
-if(BUILD_TESTING AND NOT POLICY CMP0064)
+# Enable testing with CGAL_ENABLE_TESTING
+option(CGAL_ENABLE_TESTING "Build the testing tree." OFF)
+if(CGAL_ENABLE_TESTING AND NOT POLICY CMP0064)
   message(
     FATAL_ERROR "CGAL support of CTest requires CMake version 3.4 or later.
-The variable BUILD_TESTING must be set of OFF.")
+The variable CGAL_ENABLE_TESTING must be set of OFF.")
 endif()
-if(BUILD_TESTING)
+if(CGAL_ENABLE_TESTING)
   enable_testing()
 endif()
 
