Fix ipelet demo CMakeLists.txt

--- a/CGAL_ipelets/demo/CGAL_ipelets/CMakeLists.txt
+++ b/CGAL_ipelets/demo/CGAL_ipelets/CMakeLists.txt
@@ -103,7 +103,7 @@ if(IPE_FOUND AND IPE_VERSION)
   #example in doc not installed
   add_library(simple_triangulation MODULE simple_triangulation.cpp)
   add_to_cached_list(CGAL_EXECUTABLE_TARGETS simple_triangulation)
-  target_link_libraries(simple_triangulation CGAL::Eigen3_support
+  target_link_libraries(simple_triangulation CGAL::CGAL CGAL::Eigen3_support
                         ${IPE_LIBRARIES})
   target_include_directories(simple_triangulation BEFORE PRIVATE ${IPE_INCLUDE_DIR})
   if (WITH_IPE_7)
