Re-add CGAL_ITK_support.cmake
That will allow to be compatible with ITK version 4.13 and 5.x.

--- a/Polyhedron/demo/Polyhedron/Plugins/Mesh_3/CMakeLists.txt
+++ b/Polyhedron/demo/Polyhedron/Plugins/Mesh_3/CMakeLists.txt
@@ -31,15 +31,10 @@ target_include_directories(mesh_3_plugin PRIVATE include)
 find_package(ITK NAMES ITK InsightToolkit
                  QUIET COMPONENTS ITKCommon ITKThresholding ITKSmoothing ITKImageIntensity)
 if(ITK_FOUND)
+  include(CGAL_ITK_support)
+  message(STATUS "ITK found")
   include(${ITK_USE_FILE})
-  set(ITK_LIBS ITKCommon ITKSmoothing ITKImageIntensity)
-  foreach(lib ${ITK_LIBS})
-    if(NOT TARGET ${lib})
-      message(STATUS "ITK library ${lib} not found")
-    endif()
-  endforeach()
-  target_link_libraries(mesh_3_plugin PUBLIC ${ITK_LIBS})
-  target_compile_definitions(mesh_3_plugin PUBLIC CGAL_USE_ITK)
+  target_link_libraries(mesh_3_plugin PUBLIC CGAL::ITK_support)
 endif(ITK_FOUND)
 
 find_package(VTK QUIET COMPONENTS vtkImagingGeneral vtkIOImage vtkIOXML NO_MODULE)
