Fix display of Qt version

--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -1253,6 +1253,6 @@ if(RUNNING_CGAL_AUTO_TEST OR CGAL_TEST_SUITE)
     "USING BOOST_VERSION = '${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION}'"
     )
   if(Qt6_FOUND)
-    message(STATUS "USING Qt6_VERSION = '${Qt6Core_VERSION_STRING}'")
+    message(STATUS "USING Qt6_VERSION = '${Qt6Core_VERSION}'")
   endif()#Qt6_FOUND
 endif()#RUNNING_CGAL_AUTO_TEST OR CGAL_TEST_SUITE
