--- a/Mesh_3/benchmark/Mesh_3/CMakeLists.txt
+++ b/Mesh_3/benchmark/Mesh_3/CMakeLists.txt
@@ -32,18 +32,18 @@ else()
 endif()
 
 # Compilable benchmark
-create_single_source_cgal_program("concurrency.cpp")
+create_single_source_cgal_program("benchmark_mesh_3.cpp")
 
 if(TARGET CGAL::TBB_support)
-  target_link_libraries(concurrency PUBLIC CGAL::TBB_support)
+  target_link_libraries(benchmark_mesh_3 PUBLIC CGAL::TBB_support)
 endif()
 
 # Link with Boost.ProgramOptions (optional)
 find_package(Boost QUIET COMPONENTS program_options)
 if(Boost_PROGRAM_OPTIONS_FOUND)
   if(TARGET Boost::program_options)
-    target_link_libraries(concurrency PRIVATE Boost::program_options)
+    target_link_libraries(benchmark_mesh_3 PRIVATE Boost::program_options)
   else()
-    target_link_libraries(concurrency PRIVATE ${Boost_PROGRAM_OPTIONS_LIBRARY})
+    target_link_libraries(benchmark_mesh_3 PRIVATE ${Boost_PROGRAM_OPTIONS_LIBRARY})
   endif()
 endif()
