Revert "Ported test_sweep_conic to test_sweep and fixed the conic test cases"
This reverts commit 2e99b211b0e22579f76093eec62cfbb1697e17d9.

--- a/Surface_sweep_2/test/Surface_sweep_2/CMakeLists.txt
+++ b/Surface_sweep_2/test/Surface_sweep_2/CMakeLists.txt
@@ -49,7 +49,7 @@ endfunction()
 
 compile_and_run_sweep(test_sweep test_sweep.cpp ${NAIVE}
                       ${CGAL_SEGMENT_TRAITS} "data/segments_tight")
-compile_and_run_sweep(test_sweep_conic test_sweep.cpp ${NAIVE}
+compile_and_run_sweep(test_sweep_conic test_sweep_conic.cpp ${NAIVE}
                       ${CGAL_CONIC_TRAITS} "data/conics")
 compile_and_run_sweep(test_sweep_polyline test_sweep.cpp ${NAIVE}
                       ${CGAL_POLYLINE_TRAITS} "data/polylines")
