--- a/Installation/CMakeLists.txt
+++ b/Installation/CMakeLists.txt
@@ -593,6 +593,7 @@ set(CGAL_INSTALL_LIB_DIR
 
 if(CGAL_WIN32_CMAKE_ON_CYGWIN)
   execute_process(COMMAND cygpath -w ${CMAKE_INSTALL_PREFIX}
+                  OUTPUT_STRIP_TRAILING_WHITESPACE
                   OUTPUT_VARIABLE CMAKE_INSTALL_PREFIX2)
   file(TO_CMAKE_PATH ${CMAKE_INSTALL_PREFIX2} CMAKE_INSTALL_PREFIX)
 endif()
