--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -23,7 +23,7 @@ if (NOT CGAL_FOUND OR NOT CGAL_Qt6_FOUND OR NOT Qt6_FOUND OR NOT Boost_FOUND)
   if (NOT CGAL_Qt6_FOUND)
     set(MISSING_DEPS "the CGAL Qt6 component, ${MISSING_DEPS}")
   endif()
-  if (NOT CGAL_Qt6_FOUND)
+  if (NOT Qt6_FOUND)
     set(MISSING_DEPS "the Qt6 library, ${MISSING_DEPS}")
   endif()
   if (NOT CGAL_Boost_FOUND)
