Incorporate descriptor functionality to permit the use of multi-dimensional descriptors.

--- a/Classification/examples/Classification/CMakeLists.txt
+++ b/Classification/examples/Classification/CMakeLists.txt
@@ -40,7 +40,7 @@ include(CGAL_TBB_support)
 create_single_source_cgal_program( "example_classification.cpp" )
 create_single_source_cgal_program( "example_ethz_random_forest.cpp" )
 create_single_source_cgal_program( "example_feature.cpp" )
-create_single_source_cgal_program( "example_alpha_feature.cpp" )
+create_single_source_cgal_program( "example_advanced_features.cpp" )
 create_single_source_cgal_program( "example_pcl_feature.cpp" )
 create_single_source_cgal_program( "example_generation_and_training.cpp" )
 create_single_source_cgal_program( "example_mesh_classification.cpp" )
@@ -63,7 +63,7 @@ foreach(target
     example_classification
     example_ethz_random_forest
     example_feature
-    example_alpha_feature
+    example_advanced_features
     example_pcl_feature
     example_generation_and_training
     example_mesh_classification
@@ -81,20 +81,38 @@ foreach(target
   endif()
 endforeach()
 
+# TODO: Add a proper CGAL::Embree_support *.cmake file
+find_package(embree QUIET)
+message("Embree found: ${embree_FOUND}")
+include(CGAL_embree_support)
+if(TARGET CGAL::Embree_support)#if (embree_FOUND)#if (EMBREE_VERSION)
+message("Adding embree support...")
+#  include_directories(${EMBREE_INCLUDE_DIRS})
+#  include_directories(${EMBREE_DIR})
+#  target_include_directories(example_advanced_features PUBLIC ${EMBREE_INCLUDE_DIRS})
+#  target_link_libraries(example_advanced_features PUBLIC ${EMBREE_LIBRARIES})
+#target_compile_definitions(example_advanced_features PUBLIC "CGAL_LINKED_WITH_EMBREE")
+#target_include_directories(example_advanced_features PUBLIC "${EMBREE_INCLUDE_DIRS}")
+#target_link_libraries(example_advanced_features PUBLIC ${EMBREE_LIBRARIES})
+  target_link_libraries(example_advanced_features PUBLIC CGAL::Embree_support)
+else()
+  message("NOTICE: Embree was not found. Embree ray intersection won't be available.")
+endif()
+
+#get_cmake_property(_variableNames VARIABLES)
+#list (SORT _variableNames)
+#foreach (_variableName ${_variableNames})
+#    message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
+
 
 find_package(PCL CONFIG)
 if(PCL_FOUND)
     include_directories(${PCL_INCLUDE_DIRS})
-
-    # [C/C++]>[Preprocessor]>[Preprocessor Definitions]
     add_definitions(${PCL_DEFINITIONS})
-  
-    # Uncomment to not use pre-compiled features 
-    #add_definitions( -DPCL_NO_PRECOMPILE )
-
-    # [Linker]>[General]>[Additional Library Directories]
     link_directories(${PCL_LIBRARY_DIRS})
-
-    # [Linker]>[Input]>[Additional Dependencies]
     target_link_libraries(example_pcl_feature PUBLIC ${PCL_LIBRARIES})
+else()
+  message("NOTICE: PCL was not found. The PCL feature descriptor example won't be available.")
 endif()
+
