link new example with Eigen

--- a/Tetrahedral_remeshing/examples/Tetrahedral_remeshing/CMakeLists.txt
+++ b/Tetrahedral_remeshing/examples/Tetrahedral_remeshing/CMakeLists.txt
@@ -10,7 +10,6 @@ find_package(CGAL REQUIRED)
 
 create_single_source_cgal_program("tetrahedral_remeshing_example.cpp" )
 create_single_source_cgal_program("tetrahedral_remeshing_with_features.cpp")
-create_single_source_cgal_program("tetrahedral_remeshing_with_features_and_sizing.cpp")
 create_single_source_cgal_program("tetrahedral_remeshing_of_one_subdomain.cpp")
 create_single_source_cgal_program("tetrahedral_remeshing_from_mesh.cpp")
 
@@ -40,6 +39,9 @@ if(TARGET CGAL::Eigen3_support)
 
   create_single_source_cgal_program( "mesh_and_remesh_with_sizing.cpp")
   target_link_libraries(mesh_and_remesh_with_sizing PUBLIC CGAL::Eigen3_support)
+
+  create_single_source_cgal_program("tetrahedral_remeshing_with_features_and_sizing.cpp")
+  target_link_libraries(tetrahedral_remeshing_with_features_and_sizing PUBLIC CGAL::Eigen3_support)
 
   if(CGAL_ACTIVATE_CONCURRENT_MESH_3 AND TARGET CGAL::TBB_support)
     message(STATUS "Found TBB")
